--- a/ps5.tex
+++ b/ps5.tex
@@ -108,18 +108,18 @@
 %To turn the answer into problem sets use replace to replace \begin{comment} with \begin{comment} and \\end{comment}  by \end{comment}.
 \newcommand{\lieb}[3][{{}}]{\frac{d^#1 #2}{d\,#3^#1}}
 
-\title{\textbf{Math 521 - Problem Set 1}}
+\title{\textbf{Math 521 - Problem Set 5}}
 \author{Guy Matz}
 \date{\today}
 
 \begin{document} 
 
-\maketitle
+%\maketitle
 %\newpage % Q1
 
 \begin{enumerate}[series=p]
 \itep 6\\
-If $S, T \subset M$, a metric space, and $S subset T$, prove that
+If $S, T \subset M$, a metric space, and $S \subset T$, prove that
 	\benu
 	\item $\bar{S} \subset \bar{T}$
 	\item int$(S) \subset$ int($T$) 
@@ -144,28 +144,28 @@ Prove that there is an embedding of the line as a closed subset of the plane, an
 
 \newpage
 
-\itep 43 
+\itep 43 \\
 Suppose that $(K_n)$ is a nested sequence of compact non-empty sets, $K_1 \supset K_2 \supset \dots $, and $K = \bigcap K_n$.  If for some $\mu > 0$, each diam$K_n \geq \mu$, is it true that diam $K \geq \mu$.
 \newpage
 
-\itep 14
-The \textbf{distance} from a point $p$ in a metric space $M$ to a non-empty subset $S subset M$ is defined to be dist$(p, S) = \text{inf}\{d(p,s): s \in S\}$.
+\itep 14\\
+The \textbf{distance} from a point $p$ in a metric space $M$ to a non-empty subset $S \subset M$ is defined to be dist$(p, S) = \text{inf}\{d(p,s): s \in S\}$.
 	\benu
 		\item Show that $p$ is a limit of $S$ if and only if dist$(p,S) = 0$
 		\item Show that $p \mapsto \text{dist}(p, S)$ is a uniformly continuous function of $p \in M$
 	\eenu
 \newpage
 
-\itep 41
+\itep 41\\
 Prove that the 2-sphere is not homeomorphic to the plane
 
 \newpage
-\item 54
+\itep 54\\
 If $S$ is connected, is the interior of $S$ connected?  Prove this or give a counter-example
 
 \newpage
 
-\itep 55
+\itep 55\\
 Theorem 51 states that the closure of a connected set is connected.
 	\benu
 		\item Is the closure of a disconnected set disconnected
@@ -173,25 +173,25 @@ Theorem 51 states that the closure of a connected set is connected.
 	\eenu
 \newpage
 
-\itep 56
+\itep 56\\
 Prove that every countable metric space (not empty and not a singleton) is disconnected.  [Astonishingly, there exists a countable topological space which is connected.  Its topology does not arise from a metric]
 
 \newpage
-\itep 59
+\itep 59\\
 Prove that the annulus $A = \{z \in \mbR^2: r \leq |z| \leq R\}$ is connected.
 
 \newpage
-\itep 64a
+\itep 64a\\
 Prove that every connected open subset of $\mbR^m$ is a path connected.
 
 \newpage
-\itep 68
+\itep 68\\
 Prove that $(a,b)$ and $[a,b]$ are not homeomorphic metric spaces
 
 
 \newpage
 
-\itep 69
+\itep 69\\
 Let $M$ and $N$ be non-empty metric spaces
 	\benu
 		\item If $M$ and $N$ are connected, prove that $M \times N$ is connected
@@ -201,7 +201,7 @@ Let $M$ and $N$ be non-empty metric spaces
 \newpage
 
 
-\itep 74
+\itep 74\\
 	\benu
 		\item The intersection of connected sets need not be connected.  Give an example.
 		\item Suppose that $S_1, S_2, S_3, \dots$ is a sequence of connected, closed subsets of the plane and $S_1 \supset S_2 \supset \dots$.  Is $S = \bigcap S_n$ connected?
@@ -211,7 +211,7 @@ Let $M$ and $N$ be non-empty metric spaces
 \newpage
 
 
-\itep 77
+\itep 77\\
 If a metric space $M$ is the union of path-connected sets $S_\alpha$, all of which have the path-connected set $K$ in common, is $M$ path-connected?
 
 
